ingredient is sent to firebase

--- a/src/components/UI/ErrorModal.css
+++ b/src/components/UI/ErrorModal.css
@@ -12,7 +12,7 @@
 .error-modal h2 {
   margin: 0;
   padding: 1rem;
-  background: #ff2058;
+  background: #326afe;
   color: white;
   border-radius: 7px 7px 0 0;
 }
