--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,10 @@ body {
 
 button {
   font: inherit;
-  background: #ff2058;
+  background: #326afe;
   padding: 0.5rem 2rem;
   color: white;
-  border: 1px solid #ff2058;
+  border: 1px solid #326afe;
   margin: 0.5rem 0;
   border-radius: 5px;
   cursor: pointer;
